--- a/services.html
+++ b/services.html
@@ -298,7 +298,7 @@
             </div>
           </div>
           <div class="card-footer">
-            <a href="#booking" class="btn">
+            <a href="book.html" class="btn">
   <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" height="16" width="16" viewBox="0 0 24 24">
   <path d="M19 4h-1V2h-2v2H8V2H6v2H5C3.9 4 3.01 4.9 3.01 6L3 20c0 1.1.89 2 1.99 2H19c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11zM5 7V6h14v1H5z"/>
 </svg>
